
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {int h_addr; } ;


 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;
 int memcpy (long*,int ,int) ;
 int stderr ;

long
resolveip (char *name)
{
  struct hostent *hp;
  long ip;

  if ((ip = inet_addr (name)) == -1)
    {
      if ((hp = gethostbyname (name)) == ((void*)0))
 {
   fprintf (stderr, "Can't resolve host name [%s].\n", name);
   exit (0);
 }
      memcpy (&ip, (hp->h_addr), 4);
    }
  return (ip);
}
