; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19966.c_resolveip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19966.c_resolveip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Can't resolve host name [%s].\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @resolveip(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hostent*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @inet_addr(i8* %5)
  store i64 %6, i64* %4, align 8
  %7 = icmp eq i64 %6, -1
  br i1 %7, label %8, label %22

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call %struct.hostent* @gethostbyname(i8* %9)
  store %struct.hostent* %10, %struct.hostent** %3, align 8
  %11 = icmp eq %struct.hostent* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %8
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = call i32 @exit(i32 0) #3
  unreachable

17:                                               ; preds = %8
  %18 = load %struct.hostent*, %struct.hostent** %3, align 8
  %19 = getelementptr inbounds %struct.hostent, %struct.hostent* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @memcpy(i64* %4, i32 %20, i32 4)
  br label %22

22:                                               ; preds = %17, %1
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memcpy(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
